config/monitoring/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-tls
  labels:
    name: alertmanager
  name: alertmanager
  namespace: "redhat-ods-monitoring"
spec:
  ports:
    - name: alertmanager
      port: 443
      protocol: TCP
      targetPort: 10443
  selector:
    deployment: prometheus
