config/monitoring/alertmanager/alertmanager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  name: data-science-alertmanager
  namespace: redhat-ods-monitoring
spec:
  port:
    targetPort: alertmanager
  to:
    kind: Service
    name: data-science-alertmanager
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
